working on the crebrf, disease genes, and malaria sections from results

--- a/references.bib
+++ b/references.bib
@@ -3027,20 +3027,7 @@ volume = {489},
 year = {2012}
 }
 
-@article{Comuzzie2012,
-abstract = {Genetic variants responsible for susceptibility to obesity and its comorbidities among Hispanic children have not been identified. The VIVA LA FAMILIA Study was designed to genetically map childhood obesity and associated biological processes in the Hispanic population. A genome-wide association study (GWAS) entailed genotyping 1.1 million single nucleotide polymorphisms (SNPs) using the Illumina Infinium technology in 815 children. Measured genotype analysis was performed between genetic markers and obesity-related traits i.e., anthropometry, body composition, growth, metabolites, hormones, inflammation, diet, energy expenditure, substrate utilization and physical activity. Identified genome-wide significant loci: 1) corroborated genes implicated in other studies (MTNR1B, ZNF259/APOA5, XPA/FOXE1 (TTF-2), DARC, CCR3, ABO); 2) localized novel genes in plausible biological pathways (PCSK2, ARHGAP11A, CHRNA3); and 3) revealed novel genes with unknown function in obesity pathogenesis (MATK, COL4A1). Salient findings include a nonsynonymous SNP (rs1056513) in INADL (p = 1.2E-07) for weight; an intronic variant in MTNR1B associated with fasting glucose (p = 3.7E-08); variants in the APOA5-ZNF259 region associated with triglycerides (p = 2.5-4.8E-08); an intronic variant in PCSK2 associated with total antioxidants (p = 7.6E-08); a block of 23 SNPs in XPA/FOXE1 (TTF-2) associated with serum TSH (p = 5.5E-08 to 1.0E-09); a nonsynonymous SNP (p = 1.3E-21), an intronic SNP (p = 3.6E-13) in DARC identified for MCP-1; an intronic variant in ARHGAP11A associated with sleep duration (p = 5.0E-08); and, after adjusting for body weight, variants in MATK for total energy expenditure (p = 2.7E-08) and in CHRNA3 for sleeping energy expenditure (p = 6.0E-08). Unprecedented phenotyping and high-density SNP genotyping enabled localization of novel genetic loci associated with the pathophysiology of childhood obesity.},
-author = {Comuzzie, Anthony G and Cole, Shelley A and Laston, Sandra L and Voruganti, V Saroja and Haack, Karin and Gibbs, Richard A and Butte, Nancy F},
-doi = {10.1371/journal.pone.0051954},
-issn = {1932-6203},
-journal = {PloS one},
-number = {12},
-pages = {e51954},
-pmid = {23251661},
-title = {{Novel genetic loci identified for the pathophysiology of childhood obesity in the Hispanic population.}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/23251661 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3522587},
-volume = {7},
-year = {2012}
-}
+
 
 @article{Locke2015,
 abstract = {Obesity is heritable and predisposes to many diseases. To understand the genetic basis of obesity better, here we conduct a genome-wide association study and Metabochip meta-analysis of body mass index (BMI), a measure commonly used to define obesity and assess adiposity, in up to 339,224 individuals. This analysis identifies 97 BMI-associated loci (P {\textless} 5 × 10(-8)), 56 of which are novel. Five loci demonstrate clear evidence of several independent association signals, and many loci have significant effects on other metabolic phenotypes. The 97 loci account for ∼2.7{\%} of BMI variation, and genome-wide estimates suggest that common variation accounts for {\textgreater}20{\%} of BMI variation. Pathway analyses provide strong support for a role of the central nervous system in obesity susceptibility and implicate new genes and pathways, including those related to synaptic function, glutamate signalling, insulin secretion/action, energy metabolism, lipid biology and adipogenesis.},
@@ -4216,4 +4203,23 @@ title = {{Genotype imputation with thousands of genomes.}},
 url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3276165{\&}tool=pmcentrez{\&}rendertype=abstract},
 volume = {1},
 year = {2011}
+}
+
+@article{Carlson2005,
+abstract = {The allele frequency spectrum of polymorphisms in DNA sequences can be used to test for signatures of natural selection that depart from the expected frequency spectrum under the neutral theory. We observed a significant (P = 0.001) correlation between the Tajima's D test statistic in full resequencing data and Tajima's D in a dense, genome-wide data set of genotyped polymorphisms for a set of 179 genes. Based on this, we used a sliding window analysis of Tajima's D across the human genome to identify regions putatively subject to strong, recent, selective sweeps. This survey identified seven Contiguous Regions of Tajima's D Reduction (CRTRs) in an African-descent population (AD), 23 in a European-descent population (ED), and 29 in a Chinese-descent population (XD). Only four CRTRs overlapped between populations: three between ED and XD and one between AD and ED. Full resequencing of eight genes within six CRTRs demonstrated frequency spectra inconsistent with neutral expectations for at least one gene within each CRTR. Identification of the functional polymorphism (and/or haplotype) responsible for the selective sweeps within each CRTR may provide interesting insights into the strongest selective pressures experienced by the human genome over recent evolutionary history.},
+author = {Carlson, Christopher S and Thomas, Daryl J and Eberle, Michael A and Swanson, Johanna E and Livingston, Robert J and Rieder, Mark J and Nickerson, Deborah a},
+doi = {10.1101/gr.4326505},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Carlson et al. - 2005 - Genomic regions exhibiting positive selection identified from dense genotype data.pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Carlson et al. - 2005 - Genomic regions exhibiting positive selection identified from dense genotype data(2).pdf:pdf},
+issn = {1088-9051},
+journal = {Genome research},
+keywords = {African Americans,African Americans: genetics,Asian Americans,Asian Americans: genetics,Base Sequence,DNA,DNA Primers,European Continental Ancestry Group,European Continental Ancestry Group: genetics,Evolution,Gene Frequency,Genes,Genes: genetics,Genetic,Genome,Genomics,Genomics: methods,Genotype,Human,Human: genetics,Humans,Molecular,Molecular Sequence Data,Polymorphism,Selection,Sequence Analysis},
+month = {nov},
+number = {11},
+pages = {1553--65},
+pmid = {16251465},
+publisher = {Cold Spring Harbor Lab},
+title = {{Genomic regions exhibiting positive selection identified from dense genotype data.}},
+url = {http://genome.cshlp.org/content/15/11/1553.short http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1310643{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {15},
+year = {2005}
 }
